# Comfyui_CXH_joy_caption

./: .gitignore  CXH_Min2_6_classifiy.py  Joy_caption_alpha.py  Joy_caption_node.py  README.md  __init__.py  florence_nodes.py  ic_lora_batch.py  install_req.bat  miniCPMv2_6_prompt_generator.py  miniCpMV3_4_chat.py  pyproject.toml  requirements.txt  smolvlm.py
lib/: xfile.py  ximg.py  xmodel.py
worflow/: Min2.6+joy+Florence2.json  MinCPM3_4B.json  florence_PromptGen.json  workflow.json  批量打标(Batch marking).json
